# bevy-naadf

./: .envrc.example  .gitattributes  .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  justfile  package-lock.json  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: deploy-cloudflare.yml
android/: .gitignore  build.gradle  settings.gradle
android/app/: build.gradle
android/gradle/: libs.versions.toml
assets/materials/: diffuse.texarray.ron  emissive.texarray.ron  mrh.texarray.ron  normal.texarray.ron  occlusion_roughness_metallic_height.texarray.ron
assets/materials/fabric/: material.ron
assets/materials/gravelrock/: material.ron
assets/materials/pavement/: material.ron
crates/bevy-instamat/: Cargo.toml
crates/bevy-instamat/src/: baked_material.rs  lib.rs
crates/bevy_naadf/: Cargo.toml  Trunk.toml  _headers  build.rs  index.html  init-wasm-rayon.mjs  init.js.template  sw.js
crates/bevy_naadf/assets/test/: oasis_hard_cover.vox
crates/bevy_naadf/src/: android_main.rs  app_args.rs  app_config.rs  app_mode.rs  bootstrap.rs  cli.rs  debug_view.rs  dev_font.rs  diagnostics.rs  hud.rs  lib.rs  main.rs  panel.rs  settings.rs  window_config.rs  world_size.rs
crates/bevy_naadf/src/aadf/: block_hash.rs  bounds.rs  cell.rs  construct.rs  edit.rs  entity.rs  generator.rs  mod.rs
crates/bevy_naadf/src/assets/: materials
crates/bevy_naadf/src/assets/fonts/: Roboto-LICENSE.txt
crates/bevy_naadf/src/assets/shaders/: bounds_calc.wgsl  bounds_common.wgsl  chunk_calc.wgsl  common.wgsl  entity_update.wgsl  generator_model.wgsl  gi_params.wgsl  map_copy.wgsl  naadf_final.wgsl  naadf_first_hit.wgsl  naadf_global_illum.wgsl  noise_fastnoiselite.wgsl  noise_oracle_dispatch.wgsl  noise_terrain.wgsl  pbr_sampling.wgsl  ray_tracing.wgsl  render_pipeline_common.wgsl  sample_refine.wgsl  spatial_resampling.wgsl  taa.wgsl  taa_common.wgsl  world_change.wgsl  world_data.wgsl
crates/bevy_naadf/src/assets/textures/: sample.texarray.ron
crates/bevy_naadf/src/camera/: mod.rs  poses.rs
crates/bevy_naadf/src/e2e/: checks.rs  driver.rs  framebuffer.rs  gate.rs  gates.rs  mod.rs  noise_static_world.rs  oasis_edit_visual.rs  pbr_debug_modes.rs  pbr_hard_edge.rs  pbr_visual.rs  readback.rs  small_edit_repro.rs  small_edit_visual.rs  ssim.rs  streaming_aadf_parity.rs  streaming_cold_start.rs  streaming_framebuffer_diff.rs  streaming_taa_shift_noise.rs  streaming_window.rs  tracing_error_counter.rs  vox_e2e.rs  vox_gpu_construction.rs  vox_gpu_oracle.rs  vox_horizon_parity.rs  vox_web_parity.rs  wgsl_noise_oracle.rs
crates/bevy_naadf/src/e2e_brp/: mod.rs  schema.rs  verbs.rs
crates/bevy_naadf/src/editor/: hud.rs  mod.rs  ray.rs  tools.rs  ui_theme.rs
crates/bevy_naadf/src/material_set/: mod.rs
crates/bevy_naadf/src/render/: atmosphere.rs  budget.rs  color_compression.rs  extract.rs  gi.rs  gpu_types.rs  graph.rs  graph_b.rs  mod.rs  pipelines.rs  prepare.rs  taa.rs
crates/bevy_naadf/src/render/construction/: bounds_calc.rs  change_handler.rs  chunk_calc.rs  config.rs  entity_handler.rs  entity_update.rs  extract.rs  generator_model.rs  hashing.rs  map_copy.rs  mod.rs  producer.rs  readback.rs  shader_drift_guard.rs  test_fixture.rs  validation.rs  world_change.rs
crates/bevy_naadf/src/render/construction/bounds_calc/: tests.rs
crates/bevy_naadf/src/render/prepare/: frame.rs  mod.rs  world.rs
crates/bevy_naadf/src/settings/: canonical.rs  mod.rs
crates/bevy_naadf/src/streaming/: camera.rs  chunk_source.rs  composition_tests.rs  mod.rs  noise_dispatch.rs  noise_fastnoiselite.rs  noise_fastnoiselite_cpu_oracle.rs  residency.rs  sliding_window.rs  windowed_slot_map.rs
crates/bevy_naadf/src/texture_array/: def.rs  loader.rs  mod.rs  saver.rs
crates/bevy_naadf/src/voxel/: async_vox.rs  cvox_import.rs  grid.rs  mod.rs  plugin.rs  vox_import.rs  voxel_dispatch.rs  web_vox.rs
crates/bevy_naadf/src/world/: buffer.rs  data.rs  mod.rs  oracle.rs
crates/bevy_naadf/tests/: entities.rs  oasis_edit_visual.rs  resize_test.rs  small_edit_repro.rs  small_edit_visual.rs  standard.rs  vox_e2e.rs  vox_gpu_construction.rs  vox_gpu_oracle.rs  vox_horizon_native.rs  vox_web_parity.rs
crates/naadf_e2e/: Cargo.toml
crates/naadf_e2e/src/: client.rs  lib.rs  scenario.rs  sut.rs
crates/voxel_noise/: Cargo.toml  Makefile
crates/voxel_noise/examples/: test_noise.rs  test_ranges.rs  test_simple_ranges.rs
crates/voxel_noise/js/: voxel_noise_bridge.js
crates/voxel_noise/src/: lib.rs  native.rs  presets.rs
docs/: aokana-naadf-comparison.md
docs/orchestrate/codebase-tightening/: 00-reuse-audit.md  01-context.md  README.md
docs/orchestrate/codebase-tightening-followup/: 00-reuse-audit.md  01-context.md  02-investigation-item-1-d5-step-4.md  02-investigation-item-2-d6-gate.md  02-investigation-item-3-gpugiparams.md  02-investigation-item-4-plugin-per-subsystem.md  02-investigation-item-5-window-config.md  03-architect-revision-item-1.md  03-architect-revision-item-2.md  03-architect-revision-item-3.md  03-architect-revision-item-4.md  README.md
docs/orchestrate/config-as-resource-refactor/: 00-reuse-audit.md  01-context.md  02-design.md  03-e2e-as-tests-investigation.md  04-followup-ipc-rpc-direction.md  05-impl.md  README.md
docs/orchestrate/e2e-ipc-rpc-restructure/: 00-control-layer-survey.md  03-impl.md  (+4 more)
docs/todo/: android-build.md
e2e/: kill-stale-server.mjs  package-lock.json  package.json  playwright.config.ts  serve.mjs
e2e/tests/: device-snapshot.spec.ts  sw-chrome-extension.spec.ts  vox-horizon-parity.spec.ts  vox-loading.spec.ts  wasm-smoke.spec.ts
scripts/: patch-wasm-loading.sh  trajectory-extract.sh
scripts/lint/: wasm-compat.sh
src/: camera.rs  hud.rs  lib.rs  main.rs  scene.rs
src/camera/: mod.rs  position_split.rs
src/e2e/: checks.rs  driver.rs  framebuffer.rs  gates.rs  mod.rs
src/render/: atmosphere.rs  color_compression.rs  extract.rs  gi.rs  gpu_types.rs  graph.rs  graph_b.rs  mod.rs  pipelines.rs  prepare.rs  taa.rs
src/voxel/: grid.rs  mod.rs
src/world/: buffer.rs  data.rs  mod.rs
workers/r2-proxy/: wrangler.toml
(+249 files in other folders)
