[package]
name = "bevy-naadf"
version = "0.1.0"
edition = "2021"
description = "Bevy 0.19 + Solari raytracing + DLSS Ray Reconstruction — foundation for the NAADF port"
license = "MIT"

# The crate is a library (`src/lib.rs` — the shared `build_app` app-wiring path)
# plus two thin binaries over it: `bevy-naadf` (the production app, `src/main.rs`)
# and `e2e_render` (the bounded windowed render-test harness, `src/bin/e2e_render.rs`
# — auto-discovered, listed explicitly for clarity). All the unit tests live in
# the library; `cargo test` runs them. See `docs/orchestrate/naadf-bevy-port/
# e2e-render-test.md` §9.
[lib]
name = "bevy_naadf"
path = "src/lib.rs"

[[bin]]
name = "bevy-naadf"
path = "src/main.rs"

[[bin]]
name = "e2e_render"
path = "src/bin/e2e_render.rs"

[dependencies]
# free_camera = the prebuilt fly-camera from bevy_camera_controller (off by default).
# The `dlss` feature is forwarded from this crate's own `[features]` below.
bevy = { version = "=0.19.0-rc.1", features = [
    "free_camera",
] }
# bytemuck = #[repr(C)] <-> &[u8] for the GPU-mirror structs (render/gpu_types.rs).
# Pinned to the version Bevy 0.19-rc.1 re-exports so the `Pod`/`Zeroable` traits
# match across the crate boundary.
bytemuck = { version = "=1.25.0", features = ["derive"] }
# image = PNG encoding for the e2e harness's persistent screenshot-to-disk
# (`src/e2e/framebuffer.rs` `Framebuffer::save_png`). Pinned to the exact version
# Bevy 0.19-rc.1 already pulls in transitively (so there is no second copy of the
# crate); only the `png` codec is enabled.
image = { version = "=0.25.10", default-features = false, features = ["png"] }

[features]
default = ["dlss"]
# DLSS Ray Reconstruction. Forwards to Bevy's `dlss` feature, whose transitive
# `dlss_wgpu` build step needs the DLSS SDK + Vulkan + clang (see .cargo/config.toml).
# Build with `--no-default-features` to compile without the SDK installed.
dlss = ["bevy/dlss"]
# Mirrors Bevy's escape hatch so `cargo build --all-features` works without the
# SDK; it overrides `dlss` at the Bevy level.
force_disable_dlss = ["bevy/force_disable_dlss"]
# WebGPU (wasm32) build. Forwards to Bevy's `webgpu` feature, which selects the
# WebGPU wgpu backend over Bevy's default `webgl2` (when both are on, `webgpu`
# wins). Build with `--no-default-features --features webgpu` — `dlss` has no
# web build, so the web pipeline drops it (see `index.html` / `just web`).
webgpu = ["bevy/webgpu"]

# Bevy's standard fast-iteration tweak: optimise dependencies even in dev builds.
[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1
