# bevy-naadf workspace.
#
#   crates/bevy_naadf   — the Bevy 0.19 NAADF voxel renderer (lib + `bevy-naadf`
#                         production binary + `e2e_render` test harness).
#
# `.cargo/config.toml` (workspace root) carries the native `mold` linker
# config. The wasm32 build is driven out-of-band: Trunk for bevy_naadf
# (`crates/bevy_naadf/Trunk.toml`).
[workspace]
members = ["crates/bevy_naadf", "crates/naadf_e2e"]
resolver = "2"

# Bevy's standard fast-iteration tweak: optimise dependencies even in dev
# builds. Workspace-level because Cargo only honours `[profile.*]` in the
# workspace root manifest.
[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1
