[package]
name = "bevy-instamat"
version = "0.1.0"
edition = "2021"
description = "Bevy asset loader for `material.ron` manifests + sibling PBR PNGs → `StandardMaterial`."
license = "MIT"

[dependencies]
# `material.ron` loader deps. The loader needs only bevy_asset / bevy_image /
# bevy_pbr, all in `bevy`'s default feature set, so no extra bevy features
# are enabled here. The bevy version is pinned to match `crates/bevy_naadf`
# exactly so the workspace resolves a single copy.
bevy = { version = "=0.19.0-rc.1" }
serde = { version = "1", features = ["derive"] }
ron = "0.12"
