[package]
name = "bevy-naadf"
version = "0.1.0"
edition = "2021"
description = "Bevy 0.19 + Solari raytracing + DLSS Ray Reconstruction — foundation for the NAADF port"
license = "MIT"
# The crate ships three binaries (`bevy-naadf`, `e2e_render`, `bake`); `cargo run`
# / `just run` resolve to the production app unless another `--bin` is given.
default-run = "bevy-naadf"
# Android-only build script. On non-Android targets it returns immediately;
# the cost is one extra process invocation per `cargo build`. See `build.rs`
# for why it exists (NDK outline-atomics builtins linking).
build = "build.rs"

# The crate is a library (`src/lib.rs` — the shared `build_app` app-wiring path)
# plus three thin binaries over it: `bevy-naadf` (the production app,
# `src/main.rs`), `e2e_render` (the bounded windowed render-test harness,
# `src/bin/e2e_render.rs`), and `bake` (the headless asset-processor runner,
# `src/bin/bake.rs` — retained as an InstaMAT pre-bake scaffold). All the unit
# tests live in the library; `cargo test` runs them. See
# `docs/orchestrate/naadf-bevy-port/e2e-render-test.md` §9.
[lib]
name = "bevy_naadf"
path = "src/lib.rs"
# `cdylib` produces the `libbevy_naadf.so` that `cargo-ndk` drops into the
# Android Gradle project's `jniLibs/arm64-v8a/`. `rlib` keeps the binaries
# (`bevy-naadf`, `e2e_render`, `bake`) linkable against the same library
# crate. Mirrors Bevy's own `examples/mobile/Cargo.toml`.
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "bevy-naadf"
path = "src/main.rs"

[[bin]]
name = "e2e_render"
path = "src/bin/e2e_render.rs"

[[bin]]
name = "bake"
path = "src/bin/bake.rs"

[dependencies]
# free_camera = the prebuilt fly-camera from bevy_camera_controller (off by default).
# The `dlss` feature is forwarded from this crate's own `[features]` below;
# the `asset_processor` Bevy feature is added native-only in the
# `[target.'cfg(not(wasm32))']` section below (required by the `bake` binary).
bevy = { version = "=0.19.0-rc.1", features = [
    "free_camera",
] }
# bytemuck = #[repr(C)] <-> &[u8] for the GPU-mirror structs (render/gpu_types.rs).
# Pinned to the version Bevy 0.19-rc.1 re-exports so the `Pod`/`Zeroable` traits
# match across the crate boundary.
bytemuck = { version = "=1.25.0", features = ["derive"] }
# dot_vox = MagicaVoxel `.vox` parser. Returns `DotVoxData { models, palette,
# materials, scenes, ... }` in the same shape NAADF's C# `MagicaVoxel.cs`
# parser produces; the port runs a flattening pass (`voxel/vox_import.rs`) to
# fold the scene graph into a `DenseVolume`. Used only by Track A `.vox`
# loading; pure-Rust nom parser, no native deps. See
# `docs/orchestrate/feature-completeness/02a-design-vox-loading.md`.
dot_vox = "5.2"
# image = PNG encoding for the e2e harness's persistent screenshot-to-disk
# (`src/e2e/framebuffer.rs` `Framebuffer::save_png`). Pinned to the exact
# version Bevy 0.19-rc.1 already pulls in transitively (so there is no
# second copy of the crate).
image = { version = "=0.25.10", default-features = false, features = [
    "png",
] }
# image-compare = SSIM (Structural Similarity Index) implementation, consumed by
# the `--vox-gpu-oracle` gate (`src/e2e/vox_gpu_oracle.rs`, Stage 14 — see
# `docs/orchestrate/vox-gpu-rewrite/03-impl.md`). The gate compares two REAL
# framebuffer captures (CPU oracle vs production W5 GPU path); SSIM tolerates
# the renderer's inherent ~1.5-6% per-pixel TAA/GI shimmer + GPU atomic-cursor
# nondeterminism + the install-path world-shape divergence (natural-bound CPU
# vs fixed-tiled GPU) while still cratering on gross renderer regressions
# (sky-bleed, voxel-type corruption, palette OOB) that would drop SSIM far
# below 1.0. Pure-Rust dep, no native compile.
image-compare = "0.5"
# tracing / tracing-subscriber — direct deps so the e2e
# `tracing_error_counter` module can implement a `Layer<Registry>` via the
# Bevy 0.19 `LogPlugin::custom_layer` hook (web-vox-async-loading Step 8 /
# Q5). Both are already transitive via Bevy; pinning to compatible majors so
# the trait impl resolves against the same `Layer` type Bevy uses.
tracing = "0.1"
tracing-subscriber = "0.3"
# serde = derive surface (`#[derive(Serialize)]` used by the press-P
# device-snapshot dump in `src/diagnostics.rs`). thiserror = the
# error enums in `voxel/vox_import.rs` + `voxel/cvox_import.rs` +
# `voxel/voxel_dispatch.rs`. Both are already in Bevy's tree at these
# majors, so neither adds a second copy.
serde = { version = "1", features = ["derive"] }
# serde_json — single-line JSON emit for the `[device-snapshot]` static
# diagnostic surface (`src/diagnostics.rs`). Pulled in transitively already
# via Bevy; declared here so `diagnostics.rs` can `use serde_json` without
# a feature-gate scramble.
serde_json = "1"
thiserror = "2"
# web_time — drop-in replacement for `std::time::{Instant, SystemTime}` that
# works on both native and wasm32. Required because `std::time::*::now()`
# panics on wasm32 with "time not implemented on this platform"
# (`std/src/sys/time/unsupported.rs:35`). The `diagnostics.rs` device snapshot
# captures `captured_at_unix_seconds` and the wasm32 path triggers the panic
# without this. Also satisfies `just lint-wasm-compat`.
web-time = "1"
# wgpu — direct dep so `src/diagnostics.rs`'s device-snapshot module can name
# `wgpu::Adapter` / `wgpu::DownlevelCapabilities` / `wgpu::Features` /
# `wgpu::Limits` / `wgpu::AdapterInfo` without going through Bevy's partial
# re-export surface (Bevy 0.19-rc.1 re-exports `Limits`/`Features`/
# `AdapterInfo` from `bevy::render::render_resource` but not `Adapter` or
# `DownlevelCapabilities`). Pinned to the EXACT version Bevy 0.19-rc.1
# pulls in transitively (`Cargo.lock` → wgpu 29.0.3) so there's no risk of
# a second copy.
wgpu = "=29.0.3"
# zip = ZIP archive reader for the NAADF `.cvox` format (a ZIP-wrapped custom
# binary; see `voxel/cvox_import.rs`). The `.cvox` container holds a single
# DEFLATE-compressed entry named `"data"` whose body is a fixed-width
# little-endian binary header + three flat `u32` arrays
# (`dataChunk`/`dataBlock`/`dataVoxel`) — see `ModelData.cs:181-258` for the
# C# source-of-truth. `default-features = false` drops the AES, BZIP2, ZSTD,
# and time-stamp features we don't need; only the `deflate` codec is required
# (the only codec `System.IO.Compression.ZipArchive.CreateEntry` uses).
# Pure-rust, no native deps; wasm-compatible.
zip = { version = "2", default-features = false, features = ["deflate"] }

# Native-only — the `bake` binary (`src/bin/bake.rs`) needs Bevy's
# `AssetProcessor` to opt into `AssetMode::Processed`. Without
# `bevy/asset_processor` Bevy only *reads* a pre-built `imported_assets/`;
# it never runs the processor. The production app + the e2e harness stay
# `Unprocessed` and ignore the extra processor code. Retained as
# InstaMAT pre-bake-to-disk scaffold (see the `instamat-bake-to-disk`
# user memory).
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy = { version = "=0.19.0-rc.1", features = ["asset_processor"] }

# Android — `android-game-activity` selects the modern GameActivity (AGDK) JNI
# bridge (API 31+), matching Bevy's `examples/mobile/android_example/`. Cargo
# merges this features list with the base `[dependencies]` and the
# `cfg(not(wasm32))` entry above, so the final Android build of Bevy carries
# `["free_camera", "asset_processor", "android-game-activity"]`.
[target.'cfg(target_os = "android")'.dependencies]
bevy = { version = "=0.19.0-rc.1", features = ["android-game-activity"] }

# wasm32-only: getrandom ≥0.3 refuses to compile for `wasm32-unknown-unknown`
# without an explicit backend. `dot_vox`→`ahash` pulls getrandom 0.3.4
# transitively; we add it here as a direct dep purely to flip the `wasm_js`
# feature (which routes RNG through `crypto.getRandomValues`). Paired with
# `--cfg getrandom_backend="wasm_js"` in `.cargo/config.toml` — the upstream
# error message explicitly says the feature alone is insufficient, both are
# required. Native targets are unaffected: this entire dep block is gated
# behind `cfg(target_arch = "wasm32")`.
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
# Web async `.vox` parse — `wasm-bindgen-rayon` spawns a worker pool of
# `navigator.hardwareConcurrency` Web Workers backed by `SharedArrayBuffer`
# (enabled by the COOP/COEP `same-origin` / `require-corp` headers in
# `_headers` + `e2e/serve.mjs`). `rayon::spawn` then schedules the
# multi-second `parse_vox_bytes` call onto a real worker thread instead of
# the wasm main thread — unblocks the renderer + the loading-overlay
# animation during the parse. The receiver lives in a Bevy Update system
# (`apply_pending_vox` in `voxel/web_vox.rs`) that reads from a
# `crossbeam_channel::Receiver<ImportedVox>` populated from the rayon
# worker. See `docs/orchestrate/web-vox-async-loading/03-architecture.md`
# Q1 for the full design.
#
# Build configuration is in `.cargo/config.toml`'s
# `[target.wasm32-unknown-unknown]` block (atomics + shared-memory rustflags
# + TLS link-args + `build-std`). The toolchain pin in `rust-toolchain.toml`
# guarantees `rust-src` for `build-std`.
# `no-bundler` feature: Trunk is NOT a JS bundler (it just copies files into
# `dist/`), so the default crate output (which expects a webpack/rollup-style
# bundler to rewrite the `import('../../..')` in the snippet's
# `workerHelpers.js`) does not work — every Web Worker fails with
# "Failed to fetch dynamically imported module: <origin>/" because Chrome
# resolves the relative `../../..` against the spawning page URL and gets
# `index.html`. The `no-bundler` worker uses `import.meta.url` to self-spawn
# via a Blob and reads `mainJS` (populated by the crate's own
# `wbg_rayon_PoolBuilder::main_js` from `import.meta.url` of the wasm-bindgen
# bindings module) for the wasm import — no bundler rewriting required.
# Per the README §"Usage without bundlers" of `wasm-bindgen-rayon` 1.3.0
# (see `/tmp/wasm-bindgen-rayon-1.3.0/README.md:178-186`).
wasm-bindgen-rayon = { version = "1.3", features = ["no-bundler"] }
rayon = "1.11.0"
crossbeam-channel = "0.5"
# Web .vox loading — HTTP fetch + drag-and-drop. The web build streams the
# default model from R2 (`crates/bevy_naadf/src/voxel/web_vox.rs`) and accepts
# `.vox` files dropped onto the `<canvas>` element via a JS shim that calls
# back into wasm. `console_error_panic_hook` surfaces wasm panics to the JS
# console so the failures don't disappear into the void.
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = [
    "Window",
    "Location",
    "Response",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlCanvasElement",
    "EventTarget",
    "Event",
    "DragEvent",
    "DataTransfer",
    "File",
    "FileList",
    "Blob",
    "Node",
    "DomTokenList",
] }

[features]
default = []
# e2e-brp = the native-only Bevy Remote Protocol control surface for the
# external e2e test runner. Forwards to Bevy's `bevy_remote` umbrella feature,
# which pulls `bevy_remote` (with `bevy_asset` + `bevy_render`, so the
# render-world custom-method hook is available) and its `http` default feature
# (so `RemoteHttpPlugin` exists). The shipped production binary must NOT carry
# a remote-control socket, so this is opt-in: `cargo build --workspace` (the
# project verification gate) compiles the default set; the e2e runner builds
# the SUT with `--features e2e-brp`. All BRP code is behind
# `#[cfg(feature = "e2e-brp")]`. Phase 0 transport spike — see
# `docs/orchestrate/e2e-ipc-rpc-restructure/02-design.md` §2.
e2e-brp = ["bevy/bevy_remote"]
# DLSS Ray Reconstruction. Forwards to Bevy's `dlss` feature, whose transitive
# `dlss_wgpu` build step needs the NVIDIA DLSS SDK + Vulkan + clang. Opt-in —
# the integration is not wired up yet, so leave off for normal builds.
dlss = ["bevy/dlss"]
# Mirrors Bevy's escape hatch so `cargo build --all-features` works without the
# SDK; it overrides `dlss` at the Bevy level.
force_disable_dlss = ["bevy/force_disable_dlss"]
# WebGPU (wasm32) build. Forwards to Bevy's `webgpu` feature, which selects the
# WebGPU wgpu backend over Bevy's default `webgl2` (when both are on, `webgpu`
# wins). Build with `--features webgpu` for the wasm32 target.
webgpu = ["bevy/webgpu"]

# The `bake` binary opts into `AssetMode::Processed` directly via the
# `bevy/asset_processor` feature added in the native-only deps block above; no
# crate-level cargo feature is needed. The production app / e2e harness / wasm
# build stay `Unprocessed` and ignore the extra processor code.

# NOTE: the `[profile.*]` fast-iteration tweaks live in the workspace-root
# `Cargo.toml` — Cargo only honours profile overrides in the root manifest.
